--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="US-ASCII">
-    <title>Camel CDI Currency Converter Demo</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<meta charset="US-ASCII">
+<title>Camel CDI Currency Converter Demo</title>
+<link
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+<script
+	src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 
-    <script>
+<script>
 
         // define angular module/app
         var currencyapp = angular.module('currencyapp', []);
         currencyapp.controller('CurrencyListCtrl', function ($scope, $http) {
-            $http.get('services/currencies').success(function (data) {
+            $http.get('services/rates').success(function (data) {
                 $scope.currencies = data;
             });
         });
@@ -21,6 +28,11 @@
         formapp.controller('formContrl', function ($scope, $http) {
 
             console.log('formContrl called!');
+
+            $http.get('services/currencies').success(function (data) {
+                $scope.available = data;
+            });
+            
             // process the form
             $scope.processForm = function (amt, inputcurrency) {
 
@@ -51,57 +63,55 @@
         });
 
         angular.module("CombineModule", ["currencyapp", "formapp"]);
-
-
     </script>
 </head>
+
 <body ng-app="CombineModule">
-    <h1>This example demonstrate how to develop your camel application Using Spring DSL.</h1>
+	<div class="container">
+		<h1>This example demonstrate how to develop your camel
+			application Using Spring DSL.</h1>
 
 
-    <div ng-controller="formContrl" class="form-group" class="container">
-        <form name="myForm" ng-submit="processForm(amt,currency)">
-            <h2> Set amount to convert
-                <input type="number" name="amt" class="form-control" ng-model="amt" min="0" max="1000" required>
-                <BR/>
-                set currency <select name="currency" id="currency" class="form-control" ng-model="currency" required>
-                    <option value="EUR" ng-selected="selected">Euro</option>
-                    <option value="GBP">British Pound</option>
-                    <option value="INR">Indian Rupee</option>
-                    <option value="AUD">Australian Dollar</option>
-                    <option value="CAD">Canadian Dollar</option>
-                    <option value="SGD">Singapore Dollar</option>
-                    <option value="CHF">Swiss Franc</option>
-                    <option value="MYR">Malaysian Ringgit</option>
-                    <option value="JPY">Japanese Yen</option>
-                    <option value="CNY">Chinese Yuan Renminbi</option>
-                    <option value="NZD">New Zealand Dollar</option>
-                    <option value="BRL">Brazilian Real</option>
-                </select>
+		<h2>Convert exchange rate form</h2>
+		<div ng-controller="formContrl" class="form" class="container">
+			<form name="myForm" ng-submit="processForm(amt,currency)">
+				<div class="form-group">
+					<label for="amount">Amount to convert</label> <input type="text"
+						class="form-control" id="amount" placeholder="1.0" ng-model="amt"
+						type="number" min="0" max="1000" required>
+				</div>
 
-                <p>USD $ {{amt}} coverts to {{currency}} $ {{message}} </p></h2>
+				<div class="form-group">
+					<label for="currency">Currency</label> <select class="form-control"
+						name="currency" id="currency" class="form-control"
+						ng-model="currency" required
+						ng-options="item.CODE as item.NAME for item in available ">
+					</select>
+				</div>
 
+				<button type="submit" class="btn btn-success btn-lg btn-block">
+					<span class="glyphicon glyphicon-flash"></span> Submit!
+				</button>
 
-            <button type="submit" class="btn btn-success btn-lg btn-block">
-                <span class="glyphicon glyphicon-flash"></span> Submit!
-            </button>
+				<BR />
 
-            <BR/>
-        </form>
-
-
-    </div>
+				<div class="alert alert-info">
+					<p>USD $ {{amt}} coverts to {{currency}} $ {{message}}</p>
+				</div>
+			</form>
+		</div>
 
 
-    <h2>Exchange Currency List</h2>
-    <div ng-controller="CurrencyListCtrl">
-        <table border="1">
-            <tr ng-repeat="x in currencies">
-                <td>{{x.CURRENCYCODE}}</td>
-                <td>{{x.CURRENCYNAME}}</td>
-                <td>{{x.RATE}}</td>
-            </tr>
-        </table>
-    </div>
+		<h2>Exchange Currency List</h2>
+		<div ng-controller="CurrencyListCtrl">
+			<table border="1" class="table table-striped">
+				<tr ng-repeat="x in currencies">
+					<td>{{x.CURRENCYCODE}}</td>
+					<td>{{x.CURRENCYNAME}}</td>
+					<td>{{x.RATE}}</td>
+				</tr>
+			</table>
+		</div>
+	</div>
 </body>
 </html>
