--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,14 +4,12 @@
 <meta charset="US-ASCII">
 <title>Camel CDI Currency Converter Demo</title>
 <link
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	href="css/bootstrap.min.css"
 	rel="stylesheet"
 	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	crossorigin="anonymous">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
-<script
-	src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="js/angular.js"></script>
+<script src="js/jquery.min.js"></script>
 
 
 <script>
